// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call function 1`] = `
[
  "{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = {"version": "2018-05-29", "operation": "Invoke", "payload": $context.arguments})
$util.toJson($v1)",
  "#set( $context.stash.return__flag = true )
#set( $context.stash.return__val = $context.result )
{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end",
]
`;

exports[`call function and conditional return 1`] = `
[
  "{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = {"version": "2018-05-29", "operation": "Invoke", "payload": $context.arguments})
$util.toJson($v1)",
  "#set($context.stash.result = $context.result)
{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = $context.stash.result.id == 'sam')
#if($v1)
#set($context.stash.return__val = true)
#set($context.stash.return__flag = true)
#return($context.stash.return__val)
#else
#set($context.stash.return__val = false)
#set($context.stash.return__flag = true)
#return($context.stash.return__val)
#end",
]
`;

exports[`call function including optional arg 1`] = `
[
  "{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = {})
$util.qr($v1.put('arg', $context.arguments.arg))
$util.qr($v1.put('optional', 'hello'))
#set($v2 = {"version": "2018-05-29", "operation": "Invoke", "payload": $v1})
$util.toJson($v2)",
  "#set( $context.stash.return__flag = true )
#set( $context.stash.return__val = $context.result )
{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end",
]
`;

exports[`call function including with no parameters 1`] = `
[
  "{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = {"version": "2018-05-29", "operation": "Invoke", "payload": $null})
$util.toJson($v1)",
  "#set( $context.stash.return__flag = true )
#set( $context.stash.return__val = $context.result )
{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end",
]
`;

exports[`call function including with void result 1`] = `
[
  "{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = {"version": "2018-05-29", "operation": "Invoke", "payload": $context.arguments})
$util.toJson($v1)",
  "#set( $context.stash.return__flag = true )
#set( $context.stash.return__val = $context.result )
{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end",
]
`;

exports[`call function omitting optional arg 1`] = `
[
  "{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end
#set($v1 = {"version": "2018-05-29", "operation": "Invoke", "payload": $context.arguments})
$util.toJson($v1)",
  "#set( $context.stash.return__flag = true )
#set( $context.stash.return__val = $context.result )
{}",
  "#if($context.stash.return__flag)
  #return($context.stash.return__val)
#end",
]
`;
